# qr-code-generator

./: .gitignore  README.md  pyproject.toml
src/qr/: QRCode.py  QRCodeEncoder.py  QRCodeImage.py  QRCodeInputAnalyzer.py  __init__.py
src/qr/error/: QRCodeCodewordBlock.py  QRCodeDataSize.py  QRErrorCorrectionLevel.py  __init__.py
src/qr/error/utils/: QRCodePolynomial.py
test/qr/: test_qr_code_analyzer.py  test_qr_code_encoder.py  test_qr_code_error_polynomial.py  test_qr_code_symbol.py
